--- a/index.html
+++ b/index.html
@@ -254,12 +254,14 @@ var change_question_withoutHistoryChange = function (myinput) {
   var question = questions[current_question].question;
   var mycode = questions[current_question].mycode;
   var mysolution = questions[current_question].mysolution;
+  var youtube_url = questions[current_question].youtube;
   contentSolution.style.display="none";
 
   contentTitle.innerHTML = String(current_question + 1 + "<font size=\"3%\"> / " + questions.length + "</font>" + " " + topic);
 
   var paypal='<p><form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"> <input type="hidden" name="cmd" value="_donations"> <input type="hidden" name="business" value="js@lastlog.de"> <input type="hidden" name="lc" value="DE"> <input type="hidden" name="item_name" value="Help Paul and Joachim in making a tour of nix better!"> <input type="hidden" name="no_note" value="0"> <input type="hidden" name="currency_code" value="EUR"> <input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_SM.gif:NonHostedGuest"> <input type="image" src="paypal.gif" border="0" name="submit" alt="Jetzt einfach, schnell und sicher online bezahlen – mit PayPal."> </form></p>'
-  var text = markdown.toHTML(question);
+  var youtube = "<p><b>Note:</b> See video <a href='" + youtube_url + "'>@youtube</a></p>";
+  var text = markdown.toHTML(question) + youtube;
   contentText.innerHTML = text.replace("??PAYPAL??", paypal);
 
     var links = document.links;
