adds link to gh

--- a/index.html
+++ b/index.html
@@ -476,7 +476,10 @@ var runNix = function() {
   <div class="flex-container-col">
     <div id="header_container" class="flex-container-row">
       <div id="header"><h1>A tour of Nix</h1></div>
-      <div id="rotate" onclick="flipStylesheet()"></div>
+      <div class="d-flex mt-1 gap-2 pe-2">
+        <a target="_blank" href="https://github.com/nixcloud/tour_of_nix" id="gotogh"></a>
+        <div role="button" id="rotate" onclick="flipStylesheet()"></div>
+      </div>
     </div>
     <div id="middle" class="flex-container-row">
       <div id="left" class="flex-container-col">
